# md_viewer

./: Cargo.toml
assets/icons/macOS/: AppIcon.icns
src/: main.rs
