[package]
name = "md_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI
eframe = { version = "0.32", default-features = true, features = ["glow"] }
egui = "0.32"
egui_extras = "0.32"
egui_dock = "0.17"

# Open-file dialog
rfd = "0.15"

# Markdown rendering (CommonMark -> egui)
# Enable Syntect-based code highlighting with the correct feature name:
egui_commonmark = { version = "0.21", features = ["better_syntax_highlighting"] }

# Image decoding for markdown (opt-in formats per docs)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

anyhow = "1"